[gd_scene load_steps=5 format=2]

[ext_resource path="res://Elephant.gd" type="Script" id=2]
[ext_resource path="res://Enemies/elephant_4Legs.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[sub_resource type="CircleShape2D" id=2]
radius = 128.0

[node name="Elephant" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="LN_4elephant" parent="." instance=ExtResource( 3 )]
position = Vector2( -6, 47 )
scale = Vector2( 0.25, 0.25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -18.0
margin_top = -47.0
margin_right = 22.0
margin_bottom = -33.0
align = 1

[node name="ItemDetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemDetectionArea"]
shape = SubResource( 2 )

[node name="FreeTarget" type="Position2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
collision_mask = 12
